<resources>
    <string name="app_name">Textra</string>
    <string name="question_mark">\?</string>
    <string name="file_provider_authority">com.textra.files</string>
    <string name="dashclock_extension_description">Displays the number of unread messages along with sender names.</string>
    <string name="settings_support_ok">Okay</string>
    <string name="settings_support_cancel">Cancel</string>
    <string name="settings_support_search_no_results_found">No results found</string>
    <string name="settings_support_help_title">Help</string>
    <string name="settings_support_ideas_title">Ideas</string>
    <string name="settings_support_help_search">Search for help</string>
    <string name="settings_support_contact_us_title">Get Help</string>
    <string name="settings_support_contact_us_question">Enter your question or feedback</string>
    <string name="settings_support_contact_us_next_button">Next</string>
    <string name="settings_support_contact_us_footer_send_email_button">Send Email</string>
    <string name="settings_support_contact_us_check_articles_first_hint">"Here's some articles that may help:"</string>
    <string name="settings_support_contact_us_need_more_help_send_email_hint">Still need help?</string>
    <string name="settings_support_contact_us_proceed">No matching help articles. Please double check your question or feedback, and then proceed.</string>
    <string name="settings_support_contact_us_email_address_hint">your@email.com</string>
    <string name="settings_support_contact_us_name_hint">Your name</string>
    <string name="settings_support_contact_us_send_email_button">Send Email</string>
    <string name="settings_support_contact_us_email_and_name_fields_required">Please enter an email address and name so that we can reply to your message.</string>
    <string name="settings_support_contact_us_sent_email">"Thanks, we'll be in touch as soon as possible."</string>
    <string name="settings_support_contact_us_email_error">Error sending email. Check your internet connection and try again.</string>
    <string name="settings_support_post_idea_title">Post Idea</string>
    <string name="settings_support_idea_search">Search for ideas</string>
    <string name="settings_support_idea_votes_label">%1$d votes</string>
    <string name="settings_support_idea_completed1_label">Completed:</string>
    <string name="settings_support_idea_completed2_label">available now!</string>
    <string name="settings_support_signin_email_or_name_not_specified_error">Please enter your email address and name</string>
    <string name="settings_support_signin_failed">Failed to login to UserVoice, please try again</string>
    <string name="settings_support_post_idea_title_hint">Title for your idea</string>
    <string name="settings_support_post_idea_description_hint">Description of your idea</string>
    <string name="settings_support_post_idea_next_button">Next</string>
    <string name="settings_support_post_idea_first_hint">If your idea is listed below, then vote on it now!</string>
    <string name="settings_support_post_idea_proceed">No matching ideas. Please double check your idea, and then proceed.</string>
    <string name="settings_support_post_idea_post_idea_hint">Your idea is new or different?</string>
    <string name="settings_support_post_idea_footer_button">Post Idea</string>
    <string name="settings_support_post_idea_idea_created">Your idea has been sent to the Textra development team for consideration.</string>
    <string name="settings_support_internet_error">Failed to contact support. Check your internet connection and try again.</string>
    <string name="initialsync2_need_permissions_default_app">For Textra to function it needs to be the default SMS app on your phone.</string>
    <string name="initialsync2_need_permissions">Textra will need some permissions to work properly.</string>
    <string name="initialsync2_need_permissions_dual_sim">Your phone is dual SIM capable. To use dual SIMs, Textra needs an additional special permission.</string>
    <string name="initialsync2_start_using">Start using Textra</string>
    <string name="intro_tagline">Simple. Beautiful. </string>
    <string name="intro_tagline_fast">Fast.</string>
    <string name="intro_tagline_hyper_fast"><b>Hyper</b> Fast.</string>
    <string name="initialsync_convo_still_syncing">Still optimizing these messages. They will soon appear here…</string>
    <string name="initialsync_will_be_slow_for_awhile">Textra is very fast once the optimizing is complete. That may take a few minutes…</string>
    <string name="initialsync_optimizing_has_finished">Optimization is complete: Textra is now blazing fast!</string>
    <string name="bot_hi_there">Hi there!</string>
    <string name="bot_im_simple2">"Welcome to Textra. I'm a simple bot. You can send me anything you want, but I only understand some simple things. For example, you can type '%1$s' to get a tip."</string>
    <string name="bot_im_simple">"Sorry, I'm just a simple bot! You can type '%1$s' to get a tip."</string>
    <string name="bot_emoji" />
    <string name="bot_did_upgrade">Textra was just upgraded to version %1$s</string>
    <string name="bot_yes1_fromUser">yes</string>
    <string name="bot_yes2_fromUser">yup</string>
    <string name="bot_yes3_fromUser">yep</string>
    <string name="bot_hi1_fromUser">hi</string>
    <string name="bot_hi2_fromUser">hello</string>
    <string name="bot_hi3_fromUser">howdy</string>
    <string name="bot_hi4_fromUser">yo</string>
    <string name="bot_hi5_fromUser">hey</string>
    <string name="bot_hi9_toUser">Greetings!</string>
    <string name="bot_thanks1_fromUser">thanks</string>
    <string name="bot_thanks9_toUser">"You're welcome"</string>
    <string name="bot_help1_fromUser">help</string>
    <string name="bot_help2_fromUser">help me</string>
    <string name="bot_help3_fromUser">support</string>
    <string name="bot_help9_toUser_offer">"You can get help by going to Settings > Support. You can find answers there, or ask a human. Do you want me to take you there (type 'yes')?"</string>
    <string name="bot_help9_toUser_gotoSupport">"Hang on, I'll take you there…"</string>
    <string name="bot_tip1_fromUser">hint</string>
    <string name="bot_tip2_fromUser">tip</string>
    <string name="bot_tip3_fromUser">tips</string>
    <string name="bot_tip1_toUser">Tip: on the right hand side of the screen there are hidden timestamps for each bubble. Drag a bubble to the left to see them. Try it now!</string>
    <string name="bot_tip2_toUser">"Tip: tap on a bubble to get quick options. Try it now! Then tap '%1$s'."</string>
    <string name="bot_tip3_toUser">Tip: in the conversation list, drag left to reveal the call icon. Drag right for delete icon and message count.</string>
    <string name="bot_tip6_toUser">Tip: tap the + icon, then long press the images icon to quickly select your most recent picture.</string>
    <string name="bot_tip7_toUser">Tip: in the + panel, long press the camera icon to launch the full camera app.</string>
    <string name="bot_tip8_toUser">Tip: in the + panel, tap the gallery icon, then long press any picture to make it larger.</string>
    <string name="bot_tip9_toUser">Tip: tap the + icon to add things to a message. Try it now!</string>
    <string name="bot_tip10_toUser">"Tip: you can lock messages so you can't accidentally delete them. Lock messages by long pressing them and choosing '%1$s' in the dot-dot-dot menu."</string>
    <string name="bot_huawei_close_apps_note">"Important: to make sure Textra functions properly, go to Android Settings > Battery > 'Close apps after screen lock' and turn the Textra entry OFF"</string>
    <string name="bot_testNotification1_toUser">Testing, testing, one, two…</string>
    <string name="bot_testNotification1_call">"You can't call me yet, sorry."</string>
    <string name="bot_mms_gif_toUser">Oooh, nice GIF!</string>
    <string name="bot_mms_image_toUser">Oooh, pretty pictures…</string>
    <string name="bot_mms_audio_toUser">Are you trying to tell me something?</string>
    <string name="bot_mms_video_toUser">Prefer YouTube myself</string>
    <string name="bot_mms_vcard_toUser">"Thanks, I'll update my little black book"</string>
    <string name="pickrecipients_title">Pick Recipients</string>
    <string name="pickrecipients_tab_content_groups">Groups</string>
    <string name="convolist_make_default_app_button">Make Default App</string>
    <string name="convolist_show_ads">Free with Ads</string>
    <string name="convolist_upgrade_to_pro">Upgrade to Pro</string>
    <string name="sendarea_scheduledetails_new_schedule">Schedule Message</string>
    <string name="sendarea_scheduledetails_new_date_label">Date</string>
    <string name="sendarea_scheduledetails_new_time_label">Time</string>
    <string name="sendarea_scheduledetails_new_reset">Unschedule</string>
    <string name="settings_app_icon_color_dialog_restarted">Note: Textra will be restarted when you change the icon color.</string>
    <string name="settings_app_icon_color_button_match">Match</string>
    <string name="ad_consent_dialog_body1">You have chosen to use Textra for FREE. In return targeted ads will be shown from our ad partners Amazon, Oath, MoPub, Smaato, inMobi &amp; Facebook.</string>
    <string name="ad_consent_dialog_body2">"We value your privacy, and so are letting you know these ad partners may use your phone's AAID (Android Advertising ID) and IP address to show you more relevant ads."</string>
    <string name="ad_consent_dialog_body3">Alternatively, you can Upgrade to Pro, which is ad free.</string>
    <string name="ad_consent_dialog_body4">Please refer to Settings > About > Privacy Policy for more information, including opting out of targeted ads and your right to be forgotten.</string>
    <string name="ad_consent_agreed_button">Agreed</string>
    <string name="bubblestyle_incoming_bubble_tab">Received</string>
    <string name="bubblestyle_outgoing_bubble_tab">Sent</string>
    <string name="bubblestyle_bubblecolor_title">Bubble Color</string>
    <string name="bubblestyle_textcolor_title">Text Color</string>
    <string name="settings_make_vibrate_pattern_tap_to_record">Tap to record</string>
    <string name="settings_make_vibrate_pattern_tap_to_vibrate">Tap the rhythm…</string>
    <string name="settings_make_vibrate_pattern_tap_here_to_vibrate">Tap here to make me vibrate!</string>
    <string name="settings_make_vibrate_pattern_button_stop">Stop</string>
    <string name="settings_make_vibrate_pattern_button_start_again">Start Again</string>
    <string name="settings_make_vibrate_pattern_button_save">Save</string>
    <string name="common_dialog_cancel">Cancel</string>
    <string name="blacklisted_button_unblacklist">Unblacklist</string>
    <string name="blacklist_empty">To blacklist, long press in the conversation list and select \"Blacklist\" from the menu.</string>
    <string name="blacklist_empty2">"When blacklisted contacts send you messages they are hidden and you don't get notified about them."</string>
    <string name="upgraded_to_pro_title">"You're a Pro user"</string>
    <string name="upgraded_to_pro_summary">Your support really helps!</string>
    <string name="upgraded_to_pro_no_more_ads">No more ads ever.</string>
    <string name="allow_overlay">"To use this feature, please enable the 'Draw / Display over other apps' permission (also known as 'Apps that can appear on top') for Textra."</string>
    <string name="allow_overlay2">"It's considered by Android to be a special permission, so on most phones you access it from the gear or dot-dot-dot icon (top right) in Android Settings > Apps, and "<b>not</b> from the Textra permissions screen.</string>
    <string name="allow_overlay3">"Can't find the setting? An uninstall and fresh install fixes the missing permission."</string>
    <string name="goto_settings">Go to Settings</string>
</resources>