<?xml version="1.0" encoding="utf-8"?>
<com.mplus.lib.ui.common.plus.schedule.SchedulePanelUi21View a:orientation="vertical" a:paddingTop="6.0dip" a:layout_width="fill_parent" a:layout_height="fill_parent" app:shadow="top"
  xmlns:a="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.mplus.lib.ui.common.base.BaseTextView a:id="@id/schedule_title" a:layout_width="wrap_content" a:layout_height="wrap_content" a:layout_marginLeft="16.0dip" a:layout_marginRight="16.0dip" a:text="@string/sendarea_scheduledetails_new_schedule" style="?plusPanel_schedulePanel_title" />
    <com.mplus.lib.ui.common.base.BaseFrameLayout a:layout_width="fill_parent" a:layout_height="0.0dip" a:layout_marginLeft="16.0dip" a:layout_marginRight="16.0dip" a:layout_weight="1.0">
        <com.mplus.lib.ui.common.base.BaseRelativeLayout a:layout_gravity="center_vertical" a:orientation="vertical" a:layout_width="fill_parent" a:layout_height="wrap_content">
            <com.mplus.lib.ui.common.base.BaseTextView a:id="@id/schedule_date_label" a:layout_width="wrap_content" a:layout_height="wrap_content" a:text="@string/sendarea_scheduledetails_new_date_label" a:layout_below="@id/schedule_title" a:layout_alignParentLeft="true" style="?plusPanel_schedulePanel_picked_value_label" />
            <com.mplus.lib.ui.common.base.BaseFrameLayout a:id="@id/schedule_date_field" a:layout_width="wrap_content" a:layout_height="wrap_content" a:layout_marginBottom="12.0dip" a:layout_below="@id/schedule_date_label" a:layout_alignParentLeft="true" app:shadow="bottomLine">
                <com.mplus.lib.ui.common.base.BaseTextView a:id="@id/pickedDate" a:layout_width="wrap_content" a:layout_height="wrap_content" style="?plusPanel_schedulePanel_picked_value" />
            </com.mplus.lib.ui.common.base.BaseFrameLayout>
            <com.mplus.lib.ui.common.base.BaseTextView a:id="@id/schedule_time_label" a:layout_width="wrap_content" a:layout_height="wrap_content" a:text="@string/sendarea_scheduledetails_new_time_label" a:layout_below="@id/schedule_date_field" a:layout_alignParentLeft="true" style="?plusPanel_schedulePanel_picked_value_label" />
            <com.mplus.lib.ui.common.base.BaseFrameLayout a:id="@id/schedule_time_field" a:layout_width="wrap_content" a:layout_height="wrap_content" a:layout_below="@id/schedule_time_label" a:layout_alignParentLeft="true" app:shadow="bottomLine">
                <com.mplus.lib.ui.common.base.BaseTextView a:id="@id/pickedTime" a:layout_width="wrap_content" a:layout_height="wrap_content" style="?plusPanel_schedulePanel_picked_value" />
            </com.mplus.lib.ui.common.base.BaseFrameLayout>
            <View a:id="@id/schedule_time_field_extra" a:background="@android:color/transparent" a:layout_width="1.0dip" a:layout_height="4.0dip" a:layout_below="@id/schedule_time_field" a:layout_alignParentLeft="true" />
            <com.mplus.lib.ui.common.base.BaseButton a:id="@id/unscheduleButton" a:layout_width="wrap_content" a:layout_height="wrap_content" a:text="@string/sendarea_scheduledetails_new_reset" a:layout_alignBottom="@id/schedule_time_field_extra" a:layout_alignParentRight="true" style="?common_raised_button_per_contact_themecolor" />
        </com.mplus.lib.ui.common.base.BaseRelativeLayout>
    </com.mplus.lib.ui.common.base.BaseFrameLayout>
</com.mplus.lib.ui.common.plus.schedule.SchedulePanelUi21View>